# Postergeist

./: .gitignore  README.md  pyproject.toml
.claude/skills/paper-to-poster/: SKILL.md
examples/postergeist-about/: poster.md
examples/sf3d/: poster.md
src/postergeist/: cli.py  extract.py  formats.py  parser.py  renderer.py  server.py  templates.py
src/postergeist/static/: editor.js
